Update README with real benchmark data, all 3 strategies complete, JIT proof